--- a/style/nav.css
+++ b/style/nav.css
@@ -4,12 +4,61 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: flex-start;
+  flex-wrap: nowrap;
+  align-items: center;
 /* -------------------------------------------Flex------------------------------------*/
   
- 
+  background-color: teal;
 
+  max-height: 10vh;
+}
+
+
+#logoLink{
+  padding: 0;
+  margin: 0;
+  height: 10vh;
+
+
+  display: flex;
+  align-items: center;
 
 }
 
+.mainNavLogo{
+  height: 10vh;
+}
+
+
+
+.mainNavUl{
+
+  display: flex;
+  flex-wrap: wrap;
+
+
+
+  list-style: none;
+
+
+  padding: 0;
+}
+
+.mainNavUl li{
+  padding: 1vh 4vh;
+  
+
+}
+
+.mainNav a{
+  text-decoration: none;
+  color: aqua;
+  font-size: 2vw;
+  padding: 0;
+}
+
+.mainNav a:hover{
+  color: white;
+  font-size: 3.5vh;
+
+}
