landing Page Functional, Day 2 Finished

--- a/style/body.css
+++ b/style/body.css
@@ -3,3 +3,11 @@ body{
 
 
 }
+
+#background-image{
+  background-image: url("/img/IMG_0931.JPG");
+  background-size: 100%;
+  background-repeat: no-repeat;
+
+
+}
