--- a/style/fwh-slide.css
+++ b/style/fwh-slide.css
@@ -1,15 +1,26 @@
 .fwh-slide{
   height: 100vh;
-  background: grey;
+  /* background: grey; */
   box-sizing: border-box;
+  
+
+}
+
+.fwh-slide--1{
+
+  background-image: url("/img/IMG_0931.JPG");
+  background-size: 100%;
+  background-repeat: no-repeat;
+
 
 
 
 }
 
 .fwh-slide--2{
-  background-color: blue;
+  /* background-color: blue; */
   
+  background-image: linear-gradient(to bottom, #3399ff 0%, #99ffcc 100%);
 
 
 }
