--- a/style/landing-page.css
+++ b/style/landing-page.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
 
-  margin-top: 5vh;
+  margin-top: 15vh;
 
 }
 
@@ -31,6 +31,12 @@
 
   height: 50vh;
   max-width: 100vw;
+  
+
+
+  
+
+
 }
 
 #home-text{
@@ -39,14 +45,35 @@
   font-size: 5vh;
 
   text-align: center;
+  
+  color: white;
+  text-shadow: 5px 5px black;
+  
+
+}
+
+#home-text h1{
+
+  background-color: black;
+  padding: 0;
+
 
 }
 
 #home-text hr{
   height: 1vh;
-  background-color: white;
+  background-color: black;
   border-radius: 10px;
 
+  text-shadow: 10px 10px white;
+
+
+
+
+}
+
+#home-text p{
+  background-color: black;
 
 
 }
@@ -56,15 +83,26 @@
   text-decoration: none;
   
   font: bold;
-  color: white;
+  font-size: 2.5vh;
+  color: black;
   
-  padding: 3vh;
-  margin: 5vh;
-  
+  padding: 4vh 4vw;
+  margin-top: 5vh;
 
   border: 0;
   border-radius: 1vh;
 
-  background-color: blue;
+  background-color: white;
+
+}
+
+
+#read-more-btn:hover{
+
+  background-color: black;
+  color: white;
+
+  padding: 4.5vh 4.5vw;
+  font-size: 3vh;
 
 }
