Fixed More Responsive

--- a/style/fwh-slide.css
+++ b/style/fwh-slide.css
@@ -9,7 +9,7 @@
 .fwh-slide--1{
 
   background-image: url("/img/IMG_0931.JPG");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
 
 
