--- a/style/landing-page.css
+++ b/style/landing-page.css
@@ -134,3 +134,33 @@
   font-size: 3vh;
 
 }
+
+
+/* Responsive Design------------------------------------------------------- */
+
+@media screen and (max-width: 650px){
+  
+
+  #home-text{
+    font-size: 5vw;
+
+
+  }
+
+  
+
+
+}
+
+@media screen and (max-width: 1050px){
+  #home-text{
+    font-size: 3vw;
+
+  }
+  
+  #home img{
+    height: 30vh;
+
+  }
+}
+
