Changed the Background Image

--- a/style/fwh-slide.css
+++ b/style/fwh-slide.css
@@ -8,7 +8,7 @@
 
 .fwh-slide--1{
 
-  background-image: url("/img/IMG_0931.JPG");
+  background-image: url("/img/LandingPage.JPG");
   background-size: cover;
   background-repeat: no-repeat;
 
