--- a/style/landing-page.css
+++ b/style/landing-page.css
@@ -31,6 +31,9 @@
 }
 
 #home img{
+
+  margin-left:1vh ;
+
   padding-right: 2vw;
   
 
@@ -55,6 +58,7 @@
   background-color: rgba(128, 128, 128, 0.5);
   /* padding-right: 5vh; */
   margin-left: 5vh;
+  margin-right: 1vh;
   padding: 2vw;
 
 
@@ -138,19 +142,11 @@
 
 /* Responsive Design------------------------------------------------------- */
 
-@media screen and (max-width: 650px){
-  
-
-  #home-text{
-    font-size: 5vw;
 
 
-  }
-
-  
 
 
-}
+
 
 @media screen and (max-width: 1050px){
   #home-text{
@@ -164,3 +160,49 @@
   }
 }
 
+
+@media screen and (max-width: 650px){
+  
+
+  #home-text{
+    font-size: 5vw;
+
+
+  }
+
+  #read-more-btn{
+
+    padding: 2vh 2vw;
+    margin-top: 10vh;
+  
+  
+  }
+
+  
+
+
+}
+
+@media screen and (max-width: 380px){
+  
+
+  
+
+  #home img{
+    height: 20vh;
+
+
+
+  }
+  
+
+  #read-more-btn{
+
+    padding: 2vh 2vw;
+    margin-top: 15vh;
+  
+  
+  }
+
+
+}
